--- a/style.css
+++ b/style.css
@@ -1,3 +1,50 @@
 h1 {
   text-align: center;
 }
+
+html {
+  background-color: gray;
+}
+
+.content {
+  width: 800px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+body {
+  margin: 0 auto;
+  background-color: #fff;
+  width: 800px;
+  height: 100vh;
+}
+
+.flex {
+  display: flex;
+  margin: 5px auto;
+}
+
+.flex p {
+  margin: 0 10px;
+}
+
+.delete {
+  height: 22px;
+  color: white;
+  background-color: red;
+}
+
+.list {
+  border: 2px solid blue;
+  display: flex;
+  width: 50%;
+}
+
+.scatola {
+  display: flex;  
+}
+
+#text-box {
+  margin: 0 15px;
+}
